--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="modal-content">
     <span class="close_1">&times;</span>
       <p class="bank_add_t">신랑측</p>
-    <p class="bank_add_m">부) 구기면 | 우리은행 106-02-065207</p>  
+    <p class="bank_add_m">부) 구기면<br>우리은행 106-02-065207</p>  
     <button id="copybtn1" onclick="copyToClipboard('106-02-065207');"  class="bank">계좌번호 복사.</button>
   </div>
 </div>
@@ -66,7 +66,7 @@
   <div class="modal-content">
     <span class="close_2">&times;</span>
       <p class="bank_add_t">신부측</p>
-    <p class="bank_add_m">부) 최승영 | 농협은행 352-0119-4825</p>
+    <p class="bank_add_m">부) 최승영<br>농협은행 352-0119-4825</p>
     <button id="copybtn2" onclick="copyToClipboard('352-0119-4825');"  class="bank">계좌번호 복사.</button>
   </div>
 </div>
